[package]
name = "witter-backend"
version = "0.1.0"
authors = ["Wojciech Chodkowski <chodkows@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std =  { version = "1.6.5", features = ["attributes", "unstable"] }
tide = "0.13.0"
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
uuid = "0.8.1"
