[package]
name = "witter-backend"
version = "0.1.0"
authors = ["Wojciech Chodkowski <chodkows@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std =  { version = "1.6", features = ["attributes", "unstable"] }
tide = "0.13"
sqlx = { version = "0.3", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15"
pretty_env_logger = "0.4"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "0.8"
thiserror = "1"
regex = "1"
